[package]
name = "arx_common"
version = "0.1.0"
authors = ["Sam Bock <nonvirtualthunk@gmail.com>"]

[lib]
name = "arx_common"

[dependencies]
find_folder = "*"
cgmath = { version = "0.16.1", features = ["serde"] }
lazy_static = "1.0.1"
image = "0.19.0"
interpolation = "0.1.0"
noisy_float = "0.1.4"
dimensioned = "0.6.0"
num = "0.2.0"
derive_more = "0.11.0"
itertools = "0.7.3"
anymap = "0.12.1"
spectral = "*"
log = "0.4"
pretty_env_logger = "0.2"
erased-serde = "*"
serde_derive = "*"
serde = { version = "*", features = ["rc"] }
string-interner = { version = "0.7.0", features = ["serde"] }
ron = "*"
bincode = "*"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath"
