[package]
name = "arx_control"
version = "0.1.0"
authors = ["Sam Bock <nonvirtualthunk@gmail.com>"]

[lib]
name = "arx_control"

[dependencies]
piston = "0.37.0"
piston_window = "0.80.0"
find_folder = "*"
gfx_device_gl = "0.15.3"
gfx = "0.17.0"
piston2d-gfx_graphics = "0.51.0"
cgmath = "*"
lazy_static = "*"
image = "0.19.0"
pathfinding = "*"
conrod = { version = "^0.60.0", features = ["piston"] }
interpolation = "*"
noisy_float = "*"
dimensioned = "*"
itertools = "0.7.3"
log = "*"
pretty_env_logger = "*"

[dependencies.arx_common]
path = "../arx_common"
version = "0.1.0"

[dependencies.arx_game]
path = "../arx_game"
version = "0.1.0"

[dependencies.arx_graphics]
path = "../arx_graphics"
version = "0.1.0"

[dependencies.arx_gui]
path = "../arx_gui"
version = "0.1.0"

[dependencies.arx_gui_macros]
path = "../arx_gui_macros"
version = "0.1.0"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath"
