[package]
name = "arx_game"
version = "0.1.0"
authors = ["Sam Bock <nonvirtualthunk@gmail.com>"]

[lib]
name = "arx_game"

[dependencies]
find_folder = "*"
cgmath = "0.15.0"
lazy_static = "0.2"
image = "0.17.0"
either = "1.4.0"
enum-map = "0.2.23"
rand = "0.3"
noisy_float = "0.1.4"
pathfinding = "0.5.2"

[dependencies.arx_common]
path = "../arx_common"
version = "0.1.0"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath"
