[package]
name = "arx_game"
version = "0.1.0"
authors = ["Sam Bock <nonvirtualthunk@gmail.com>"]

[lib]
name = "arx_game"

[dependencies]
find_folder = "*"
cgmath = "0.16.1"
lazy_static = "1.0.1"
image = "0.19.0"
either = "1.4.0"
enum-map = "0.2.23"
rand = "0.3"
noisy_float = "0.1.4"
pathfinding = "0.8.0"
anymap = "0.12.1"
spectral = "0.6.0"
log = "0.4"
pretty_env_logger = "0.2"
dimensioned = "0.6.0"
num-traits = { path = "/Users/nvt/Code/third-party-libs/num-traits" }

[dependencies.arx_common]
path = "../arx_common"
version = "0.1.0"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath"
