[package]
name = "arx_graphics"
version = "0.1.0"
authors = ["Sam Bock <nonvirtualthunk@gmail.com>"]

[lib]
name = "arx_graphics"

[dependencies]
piston = "0.37.0"
piston_window = "0.80.0"
find_folder = "*"
gfx_device_gl = "0.15.3"
gfx = "0.17.1"
piston2d-gfx_graphics = "0.51.0"
cgmath = "0.16.1"
lazy_static = "1.0.1"
image = "0.19.0"
dimensioned = "0.6.0"
num-traits = { path = "/Users/nvt/Code/third-party-libs/num-traits" }

[dependencies.arx_common]
path = "../arx_common"
version = "0.1.0"

[dependencies.arx_game]
path = "../arx_game"
version = "0.1.0"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath"
