[package]
name = "arx_gui"
version = "0.1.0"
authors = ["Sam Bock <nonvirtualthunk@gmail.com>"]

[lib]
name = "arx_gui"

[dependencies]
piston = "0.37.0"
piston_window = "0.80.0"
find_folder = "*"
gfx_device_gl = "0.15.3"
gfx = "0.17.0"
piston2d-gfx_graphics = "0.51.0"
cgmath = "*"
lazy_static = "*"
image = "0.19.0"
pathfinding = "*"
interpolation = "*"
noisy_float = "*"
dimensioned = "*"
itertools = "0.7.3"
log = "*"
pretty_env_logger = "*"
backtrace = "0.3.9"
num = "0.2.0"
derive_more = "0.11.0"

[dependencies.arx_common]
path = "../arx_common"
version = "0.1.0"

[dependencies.arx_graphics]
path = "../arx_graphics"
version = "0.1.0"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath"
