[package]
name = "arx_gui_macros"
version = "0.1.0"
authors = ["Sam Bock <nonvirtualthunk@gmail.com>"]

[lib]
name = "arx_gui_macros"
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
syn = { version = "0.14", features = ["extra-traits"] }
quote = "0.6"

[dependencies.arx_common]
path = "../arx_common"
version = "0.1.0"

[dependencies.arx_gui]
path = "../arx_gui"
version = "0.1.0"