[package]
name = "spinning_square"
version = "0.1.0"
authors = ["Sam Bock <nonvirtualthunk@gmail.com>"]
autobins = false

[[bin]]
name = "survival_hex"
path = "src/survival_hex.rs"


[dependencies]
piston = "0.37.0"
piston_window = "0.80.0"
find_folder = "*"
gfx_device_gl = "0.15.3"
gfx = "0.17.0"
piston2d-graphics = "0.26.0"
piston2d-opengl_graphics = "0.53.0"
pistoncore-glutin_window = "0.47.0"
piston2d-gfx_graphics = "0.51.0"
cgmath = "*"
lazy_static = "*"
image = "0.19.0"
pathfinding = "*"
conrod = { version = "^0.60.0", features = ["piston"] }
dimensioned = "*"
log = "0.4"
pretty_env_logger = "0.2"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath"


[dependencies.arx_game]
path = "../arx_game"
version = "0.1.0"

[dependencies.arx_graphics]
path = "../arx_graphics"
version = "0.1.0"


[dependencies.arx_control]
path = "../arx_control"
version = "0.1.0"

[dependencies.arx_gui]
path = "../arx_gui"
version = "0.1.0"

[dependencies.arx_common]
path = "../arx_common"
version = "0.1.0"

[profile.release]
debug = true

#[target.x86_64-apple-darwin.freetype]
#rustc-link-lib = "freetype:dylib"