[package]
name = "samvival"
version = "0.1.0"
authors = ["Sam Bock <nonvirtualthunk@gmail.com>"]
autobins = false
description = "samvival"

[[bin]]
name = "samvival"
path = "src/survival_hex.rs"


[dependencies]
piston = "0.37.0"
piston_window = "0.80.0"
find_folder = "*"
gfx_device_gl = "0.15.3"
gfx = "0.17.0"
piston2d-graphics = "0.26.0"
piston2d-opengl_graphics = "0.53.0"
pistoncore-glutin_window = "0.47.0"
piston2d-gfx_graphics = "0.51.0"
cgmath = "*"
lazy_static = "*"
image = "0.19.0"
pathfinding = "*"
conrod = { version = "^0.60.0", features = ["piston"] }
dimensioned = "*"
log = "0.4"
pretty_env_logger = "0.2"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath"


[dependencies.samvival_game]
path = "../samvival/game"
version = "0.1.0"

[dependencies.arx_graphics]
path = "../arx_graphics"
version = "0.1.0"


[dependencies.samvival_control]
path = "../samvival/control"
version = "0.1.0"

[dependencies.arx_gui]
path = "../arx_gui"
version = "0.1.0"

[dependencies.arx_common]
path = "../arx_common"
version = "0.1.0"

[profile.release]
debug = true

#[target.x86_64-apple-darwin.freetype]
#rustc-link-lib = "freetype:dylib"

[package.metadata.bundle]
name = "Samvival"
identifier = "arx.samvival"
icon = ["../assets/icons/32x32.png"]
version = "1.0.0"
resources = ["../assets"]
copyright = "Copyright (c) Sam Bock 2018. All rights reserved."
category = "Game"
short_description = "Samvival"
osx_minimum_system_version = "10.8"
