[package]
name = "samvival_control"
version = "0.1.0"
authors = ["Sam Bock <nonvirtualthunk@gmail.com>"]

[lib]
name = "samvival_control"

[dependencies]
piston = "0.37.0"
piston_window = "0.80.0"
find_folder = "*"
gfx_device_gl = "0.15.3"
gfx = "0.17.0"
piston2d-gfx_graphics = "0.51.0"
cgmath = "*"
lazy_static = "*"
image = "0.19.0"
pathfinding = "*"
interpolation = "*"
noisy_float = "*"
dimensioned = "*"
itertools = "0.7.3"
log = "*"
pretty_env_logger = "*"
serde = "*"
serde_derive = "*"
ron = "*"
bincode = "*"

[dependencies.arx_common]
path = "../../arx_common"
version = "0.1.0"

[dependencies.samvival_game]
path = "../game"
version = "0.1.0"

[dependencies.samvival_graphics]
path = "../graphics"
version = "0.1.0"

[dependencies.samvival_gui]
path = "../gui"
version = "0.1.0"

[dependencies.samvival_ai]
path = "../ai"
version = "0.1.0"

[dependencies.arx_gui_macros]
path = "../../arx_gui_macros"
version = "0.1.0"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath"
