[package]
name = "samvival_graphics"
version = "0.1.0"
authors = ["Sam Bock <nonvirtualthunk@gmail.com>"]

[lib]
name = "samvival_graphics"

[dependencies]
piston = "0.37.0"
piston_window = "0.80.0"
find_folder = "*"
gfx_device_gl = "0.15.3"
gfx = "0.17.0"
piston2d-graphics = "0.26.0"
pistoncore-glutin_window = "0.47.0"
piston2d-gfx_graphics = "0.51.0"
piston2d-opengl_graphics = "0.51.0"
cgmath = "*"
lazy_static = "*"
image = "0.19.0"
dimensioned = "*"
itertools = "0.7.3"
rusttype = { version = "0.6.2", features = ["gpu_cache"] }
log = "*"
pretty_env_logger = "*"
heck = "0.3.0"

[dependencies.arx_common]
path = "../../arx_common"
version = "0.1.0"

[dependencies.arx_graphics]
path = "../../arx_graphics"
version = "0.1.0"

[dependencies.samvival_game]
path = "../game"
version = "0.1.0"

[dependencies.vecmath]
git = "https://github.com/PistonDevelopers/vecmath"
